Add sprite figures

--- a/notebooks/Sprite Sheets.ipynb
+++ b/notebooks/Sprite Sheets.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "colors = {\n",
     "    \"00\": \"\",\n",
-    "    \"01\": \"green\",\n",
-    "    \"10\": \"blue\",\n",
-    "    \"11\": \"red\",\n",
+    "    \"01\": \"\\\\MULTICOLOR0\",\n",
+    "    \"10\": \"\\\\SPRITECOLOR\",\n",
+    "    \"11\": \"\\\\MULTICOLOR1\",\n",
     "}\n",
     "sprites_files = [\"../iridisalpha/src/graphics/sprites.asm\",\n",
     "                 \"../iridisalpha/src/graphics/enemy_sprites.asm\"]\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
