--- a/src/level_data.tex
+++ b/src/level_data.tex
@@ -161,6 +161,9 @@ time we pass through to animate the ship:
     \setlength{\tabcolsep}{3.0pt}
     \setlength\cmidrulewidth{\heavyrulewidth} % Make cmidrule = 
 	\centering
+	\def\MULTICOLORONE{green}
+	\def\MULTICOLORTWO{green}
+	\def\SPRITECOLOR{green}
 	\begin{subfigure}{0.3\textwidth}
 		\input{FLYING_SAUCER1}
 	\end{subfigure}
