--- a/src/book.tex
+++ b/src/book.tex
@@ -374,6 +374,9 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \usepackage{overpic}
 \usepackage{pict2e}
 
+\usepackage{pgfplots}
+\usepackage{makecell}
+
 \begin{document}    
 \ifx\forprint\undefined
 \includepdf{\base/illu/cover_front.pdf}
@@ -386,14 +389,16 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \tableofcontents 
 
+\subfile{src/bumph} %draft
+\subfile{src/archaeo} %draft
 %\subfile{src/disassembly}
-\subfile{src/music}
-%\subfile{src/planets} % draft
-%\subfile{src/level_data} % draft
+\subfile{src/music} % draft
+\subfile{src/planets} % draft
+\subfile{src/level_data} % draft
 %\subfile{src/dna}
 %\subfile{src/mif}
-%\subfile{src/level_data_appendix} % draft
-%\subfile{src/planets_appendix} % draft
+\subfile{src/level_data_appendix} % draft
+\subfile{src/planets_appendix} % draft
 \subfile{src/music_appendix} % draft
 
 \printindex
