--- a/src/book.tex
+++ b/src/book.tex
@@ -375,6 +375,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \usepackage{pict2e}
 
 \usepackage{pgfplots}
+\usepackage{pgfplotstable}
 \usepackage{makecell}
 
 \begin{document}    
@@ -389,18 +390,19 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \tableofcontents 
 
-\subfile{src/bumph} %draft
-\subfile{src/archaeo} %draft
+%\subfile{src/bumph} %draft
+%\subfile{src/archaeo} %draft
 %\subfile{src/disassembly}
-\subfile{src/music} % draft
+%\subfile{src/planets} % draft
+%\subfile{src/level_data} % draft
+%\subfile{src/music} % draft
 \subfile{src/torus} % draft
-\subfile{src/planets} % draft
-\subfile{src/level_data} % draft
+\subfile{src/torus-animation} % draft
 %\subfile{src/dna}
 %\subfile{src/mif}
-\subfile{src/level_data_appendix} % draft
-\subfile{src/planets_appendix} % draft
-\subfile{src/music_appendix} % draft
+%\subfile{src/level_data_appendix} % draft
+%\subfile{src/planets_appendix} % draft
+%\subfile{src/music_appendix} % draft
 
 \printindex
 
