--- a/src/book.tex
+++ b/src/book.tex
@@ -392,12 +392,12 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 %\subfile{src/bumph} %draft
 %\subfile{src/archaeo} %draft
-%\subfile{src/disassembly}
+\subfile{src/disassembly}
 %\subfile{src/planets} % draft
 %\subfile{src/level_data} % draft
 %\subfile{src/music} % draft
-\subfile{src/torus} % draft
-\subfile{src/torus-animation} % draft
+%\subfile{src/torus} % draft
+%\subfile{src/torus-animation} % draft
 %\subfile{src/dna}
 %\subfile{src/mif}
 %\subfile{src/level_data_appendix} % draft
