--- a/src/book.tex
+++ b/src/book.tex
@@ -325,6 +325,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \definecolor{c64_gray3}{HTML}{bbbbbb}
 
 \newcommand*{\icode}[1]{{\texttt{#1}}}
+\newcommand*{\bicode}[1]{{\textbf{\texttt{#1}}}}
 
 \newcommand{\smallcube}[2]{%
 \setlength{\fboxsep}{0pt}%
@@ -423,6 +424,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \tableofcontents 
 
 %\subfile{src/bumph} %draft
+\subfile{src/binary} %draft
 %\subfile{src/archaeo} %draft
 %\subfile{src/disassembly} %draft
 %\subfile{src/titlescreen}
@@ -431,11 +433,11 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 %\subfile{src/music} % draft
 %\subfile{src/torus} % draft
 %\subfile{src/torus-animation} % draft
-%\subfile{src/dna}
+%\subfile{src/dna} % wip
 %\subfile{src/mif}
 %\subfile{src/bugs} %draft
-\subfile{src/level_data_appendix} %draft
-%\subfile{src/level_data_appendix_detail} % draft
+%\subfile{src/level_data_appendix} %draft
+%\subfile{src/level_data_appendix_detail} % draft obsolete?
 %\subfile{src/planets_appendix} % draft
 %\subfile{src/music_appendix} % draft
 
