Update to main game chapter

--- a/notebooks/Gilby Jumping Diagrams.ipynb
+++ b/notebooks/Gilby Jumping Diagrams.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        " None]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,8 @@
     "    background = Image.new('RGB', (504,312), \"black\")\n",
     "    background.paste(img, (60,20))\n",
     "    \n",
-    "    ylabel = f\"{routine} Y:{accum} Offset:{offset}\"\n",
+    "    result = (int(accum,16) + int(offset,16)) % 256\n",
+    "    ylabel = f\"Current Y of ${accum} + Offset of ${offset.upper()} = New Y of ${hex(result)[-2:].upper()}\"\n",
     "    plt = createGraph(background, ylabel, raster, label_size=25)\n",
     "    plt.savefig(f\"../src/{file_name}\", bbox_inches=\"tight\")\n",
     "    \n",
