--- a/src/book.tex
+++ b/src/book.tex
@@ -426,6 +426,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \tableofcontents 
 
+%\subfile{src/preface} %draft
 %\subfile{src/bumph} %draft
 %\subfile{src/binary} %draft
 %\subfile{src/archaeo} %draft
