--- a/src/main_game.tex
+++ b/src/main_game.tex
@@ -741,6 +741,6 @@ land, creating an acceleration effect due to gravity.
 \caption{Each increment in the offset, performed every three movements, results in an acceleration effect.}
 \end{figure}
 
-With a simple, consistent addition operation each time it comes to positino the gilby we've managed to achieve a jumping and
+With a simple, consistent addition operation each time it comes to position the gilby we've managed to achieve a jumping and
 landing effect with a neat gravity effect built in!
 
