Add png of front cover to site

--- a/notebooks/Gilby Jumping Diagrams.ipynb
+++ b/notebooks/Gilby Jumping Diagrams.ipynb
@@ -199,6 +199,39 @@
      "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process ForkPoolWorker-46:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/process.py\", line 315, in _bootstrap\n",
+      "    self.run()\n",
+      "Process ForkPoolWorker-47:\n",
+      "Process ForkPoolWorker-48:\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/queues.py\", line 355, in get\n",
+      "    with self._rlock:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/process.py\", line 315, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/synchronize.py\", line 95, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "KeyboardInterrupt\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/queues.py\", line 355, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/usr/lib/python3.8/multiprocessing/process.py\", line 315, in _bootstrap\n",
+      "    self.run()\n"
+     ]
     }
    ],
    "source": [
